Поменял newProfile на profile

--- a/html/headerM&footer.html
+++ b/html/headerM&footer.html
@@ -30,17 +30,17 @@
         <div class="footer_box">
             <h2 class="footer_box_title">Информация</h2>
             <ol class="footer_box_list">
-                <li><a href="" class="footer_box_list_item">Главная</a></li>
-                <li><a href="" class="footer_box_list_item">Курсы</a></li>
-                <li><a href="" class="footer_box_list_item">О нас</a></li>
-                <li><a href="" class="footer_box_list_item">Личный кабинет</a></li>
+                <li><a href="#" class="footer_box_list_item">Главная</a></li>
+                <li><a href="#" class="footer_box_list_item">Курсы</a></li>
+                <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                <li><a href="#" class="footer_box_list_item">Личный кабинет</a></li>
             </ol>
         </div>
 
         <div class="footer_box">
             <h2 class="footer_box_title">Контакты</h2>
             <ol class="footer_box_list">
-                <li><a href="" class="footer_box_list_item"><img src="../img/gps.png" alt="Navigate"></a></li>
+                <li><a href="#" class="footer_box_list_item"><img src="../img/gps.png" alt="Navigate"></a></li>
             </ol>
         </div>
 
