--- a/html/404.html
+++ b/html/404.html
@@ -63,7 +63,7 @@
                         <a class="footer_box_list_item_link text2" href="#">О нас</a>
                     </li>
                     <li class="footer_box_list_item">
-                        <a class="footer_box_list_item_link text2" href="../html/newProfile.html">Личный кабинет</a>
+                        <a class="footer_box_list_item_link text2" href="../html/profile.html">Личный кабинет</a>
                     </li>
                 </ul>
             </div>
