--- a/html/headerS&footer.html
+++ b/html/headerS&footer.html
@@ -31,7 +31,7 @@
                 <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
                 <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
                 <li><a href="#" class="footer_box_list_item">О нас</a></li>
-                <li><a href="../html/newProfile.html" class="footer_box_list_item">Личный кабинет</a></li>
+                <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
             </ol>
         </div>
 
