Правки. Доработал лк

--- a/html/profile.html
+++ b/html/profile.html
@@ -12,30 +12,12 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="header_container">
-            <!-- <div class="header_logo">
-                <img src="../img/LogoNB.png" alt="Logo" />
-            </div> -->
-
-            <div class="header_search">
-                <input type="text" placeholder="Search" />
-                <img src="../img/Search.png" alt="Search">
-            </div>
-        </div>
-    </header>
-
     <main class="main">
         <section class="info">
             <div class="info_menu">
                 <div class="info_menu_item">
                     <img src="../img/profile.png" alt="Profile">
-                    <a class="info_menu_item_link" href="#">Личный кабинет</a>
-                </div>
-
-                <div class="info_menu_item">
-                    <img src="../img/designtools.png" alt="Lessons">
-                    <a class="info_menu_item_link" href="#">Занятия</a>
+                    <a class="info_menu_item_link" href="../html/profile.html">Личный кабинет</a>
                 </div>
 
                 <div class="info_menu_item">
@@ -50,11 +32,11 @@
 
                 <div class="info_menu_item">
                     <img src="../img/box1.png" alt="Choose a course">
-                    <a class="info_menu_item_link" href="#">Выбрать курс</a>
+                    <a class="info_menu_item_link" href="../html/courses.html">Курсы</a>
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/logoutcurve.png" alt="">
+                    <img src="../img/logoutcurve.png" alt="Logout">
                     <a class="info_menu_item_link" href="#">Выход</a>
                 </div>
             </div>
@@ -89,7 +71,7 @@
                 <h2 class="courses_title heading">Актуальные курсы</h2>
                 <div class="courses">
                     <div class="course_box">
-                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
                             <img src="../img/scratch1.png" alt="Course" class="course__box_image" />
                         </div>
 
@@ -97,7 +79,7 @@
                     </div>
 
                     <div class="course_box">
-                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
                             <img src="../img/python.png" alt="Course" class="course__box_image" />
                         </div>
 
@@ -110,7 +92,7 @@
                 <h2 class="courses_title heading">Пройденные курсы</h2>
                 <div class="courses">
                     <div class="course_box">
-                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
                             <img src="../img/scratch2.png" alt="Course" class="course__box_image" />
                         </div>
 
@@ -118,7 +100,7 @@
                     </div>
 
                     <div class="course_box">
-                        <div onclick="window.location.href='LMS_current_courses.html'" class="course_box_item">
+                        <div onclick="window.location.href='current_courses.html'" class="course_box_item">
                             <img src="../img/php.png" alt="Course" class="course__box_image" />
                         </div>
 
