--- a/html/current_courses.html
+++ b/html/current_courses.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="../js/current_courses.js"></script>
     <link rel="stylesheet" href="../css/current_courses.css" />
-    <link rel="stylesheet" href="../css/header&footer.css" />
+    <link rel="stylesheet" href="../css/headerM&footer.css" />
     <link rel="stylesheet" href="../css/fonts.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -61,49 +61,39 @@
 
     <footer>
       <section class="footer">
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Информация</h2>
-          <ul class="footer_box_list">
-            <li class="footer_box_list_item text2">
-              <a class="footer_box_list_item_link text2" href="#">Главная</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">Курсы</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">О нас</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#"
-                >Личный кабинет</a
-              >
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Местоположение</h2>
-          <div class="footer_box_gps">
-            <img class="footer_box_gps_img" src="../img/gps.png" alt="gps" />
+          <div class="footer_box">
+              <h2 class="footer_box_title">Информация</h2>
+              <ol class="footer_box_list">
+                  <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+                  <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+                  <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                  <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
+              </ol>
           </div>
-        </div>
 
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Контакты</h2>
-          <ul class="footer_box_list">
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">instagram</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a
-                class="footer_box_list_item_link text2"
-                href="https://vk.com/cyberclass_volok"
-                >vk</a
-              >
-            </li>
-          </ul>
-        </div>
+          <div class="footer_box">
+              <h2 class="footer_box_title">Контакты</h2>
+              <ol class="footer_box_list">
+                  <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+                          class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
+                  </li>
+              </ol>
+          </div>
+
+          <div class="footer_box footer_info">
+              <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
+              <p class="footer_info_text">
+                  Наш адрес: <br>
+                  Школьная улица, 9А, Волоколамск, Московская область
+              </p>
+              <div class="footer_info_box">
+                  <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
+                          src="../img/Rectangle 3.png" alt="Vk"></a>
+
+                  <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
+              </div>
+          </div>
       </section>
-    </footer>
+  </footer>
   </body>
 </html>
