--- a/html/registration.html
+++ b/html/registration.html
@@ -1,98 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="../js/registration.js"></script>
-    <link rel="stylesheet" href="../css/profile.css" />
-    <link rel="stylesheet" href="../css/header&footer.css" />
-    <link rel="stylesheet" href="../css/login&registration.css" />
-    <link rel="stylesheet" href="../css/fonts.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <section class="header">
-        <div class="header_logo">
-          <img class="header_logo_img" src="../img/LogoNB.png" alt="logo" />
-        </div>
 
-        <div class="header_menu">
-          <a href="main_page.html" class="header_menu_link">Главная</a>
-          <a href="#" class="header_menu_link">Курсы</a>
-          <a href="#" class="header_menu_link">О нас</a>
-          <a href="registration.html" class="header_menu_link reg_btn">Регистрация</a>
-        </div>
-      </section>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="../js/registration.js"></script>
+  <link rel="stylesheet" href="../css/profile.css" />
+  <link rel="stylesheet" href="../css/headerM&footer.css" />
+  <link rel="stylesheet" href="../css/login&registration.css" />
+  <link rel="stylesheet" href="../css/fonts.css" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+</head>
 
-    <main>
-      <section class="main_container">
-            <div class="enter_text">Регистрация</div>
-            <div class="input_email">
-                <div class="data_text">Введите email</div>
-                <input  name="email" type="email"  class="enter_data_field">
-            </div>
-            <div class="input_password">
-                <div class="data_text">Введите пароль</div>
-                <input id="password_field" name="password" type="password" class="enter_data_field">
-                <div class="data_text mt5">Повторите пароль</div>
-                <input id="confirm_password_field" name="password_confirm" type="password" class="enter_data_field">
-            </div>
-            <div id="confirm_password_error" class="confirm_password_error error_text">Пароли должны совпадать!</div>
-            <button id="reg_button" class="reg_button">Зарегистрироваться</button>
-            <div class="no_profile_container">
-                <div class="no_profile_text">Есть профиль?</div>
-                <a href="login.html" class="registration_button">Войти</a>
-            </div>
-      </section>
-    </main>
+<body>
+  <main>
+    <section class="main_container">
+      <div class="enter_text">Регистрация</div>
+      <div class="input_email">
+        <div class="data_text">Введите email</div>
+        <input name="email" type="email" class="enter_data_field">
+      </div>
+      <div class="input_password">
+        <div class="data_text">Введите пароль</div>
+        <input id="password_field" name="password" type="password" class="enter_data_field">
+        <div class="data_text mt5">Повторите пароль</div>
+        <input id="confirm_password_field" name="password_confirm" type="password" class="enter_data_field">
+      </div>
+      <div id="confirm_password_error" class="confirm_password_error error_text">Пароли должны совпадать!</div>
+      <button id="reg_button" class="reg_button">Зарегистрироваться</button>
+      <div class="no_profile_container">
+        <div class="no_profile_text">Есть профиль?</div>
+        <a href="login.html" class="registration_button">Войти</a>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-      <section class="footer">
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Информация</h2>
-          <ul class="footer_box_list">
-            <li class="footer_box_list_item text2">
-              <a class="footer_box_list_item_link text2" href="#">Главная</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">Курсы</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">О нас</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="profile.html">Личный кабинет</a>
-            </li>
-          </ul>
-        </div>
+  <footer>
+    <section class="footer">
+      <div class="footer_box">
+        <h2 class="footer_box_title">Информация</h2>
+        <ol class="footer_box_list">
+          <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+          <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+          <li><a href="#" class="footer_box_list_item">О нас</a></li>
+          <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
+        </ol>
+      </div>
 
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Местоположение</h2>
-          <div class="footer_box_gps">
-            <img class="footer_box_gps_img" src="../img/gps.png" alt="gps" />
-          </div>
-        </div>
+      <div class="footer_box">
+        <h2 class="footer_box_title">Контакты</h2>
+        <ol class="footer_box_list">
+          <li><a
+              href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+              class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
+          </li>
+        </ol>
+      </div>
 
-        <div class="footer_box">
-          <h2 class="footer_box_title h2 text2">Контакты</h2>
-          <ul class="footer_box_list">
-            <li class="footer_box_list_item">
-              <a class="footer_box_list_item_link text2" href="#">instagram</a>
-            </li>
-            <li class="footer_box_list_item">
-              <a
-                class="footer_box_list_item_link text2"
-                href="https://vk.com/cyberclass_volok"
-                >vk</a
-              >
-            </li>
-          </ul>
+      <div class="footer_box footer_info">
+        <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
+        <p class="footer_info_text">
+          Наш адрес: <br>
+          Школьная улица, 9А, Волоколамск, Московская область
+        </p>
+        <div class="footer_info_box">
+          <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img src="../img/Rectangle 3.png"
+              alt="Vk"></a>
+
+          <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
         </div>
-      </section>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </footer>
+</body>
+
 </html>
