--- a/html/current_courses.html
+++ b/html/current_courses.html
@@ -26,11 +26,10 @@
 
     <main class="main_container">
       <section class="idk_buttons_container">
-        <img src="../img/Занятия/Frame 2064.svg" alt="Человек">
-        <img src="../img/Занятия/Frame 2065.svg" alt="Кисть">
-        <img src="../img/Занятия/Frame 2066.svg" alt="Документ">
-        <img src="../img/Занятия/Frame 2067.svg" alt="Куб">
-        <img src="../img/Занятия/Frame 2068.svg" alt="Квадрат">
+        <a href="profile.html"><img src="../img/Занятия/Frame 2064.svg" alt="Человек"></a>
+        <a href="current_courses.html"><img src="../img/Занятия/Frame 2066.svg" alt="Документ"></a>
+        <a href="courses.html"><img src="../img/Занятия/Frame 2067.svg" alt="Куб"></a>
+        <a href="profile.html"></a><img src="../img/Занятия/Frame 2068.svg" alt="Квадрат"></a>
       </section>
 
       <section class="current_task_container">
@@ -48,10 +47,10 @@
       
       <section class="task_content_container">
         <div id="task_name" class="task_name">Лекция 1.1</div>
-        <div id="task_description" class="task_description">Ясность нашей позиции очевидна: социально-экономическое развитие обеспечивает актуальность благоприятных перспектив. С учётом сложившейся международной обстановки, базовый вектор развития однозначно определяет каждого участника как способного принимать собственные решения касаемо переосмысления внешнеэкономических политик. Учитывая ключевые сценарии поведения, социально-экономическое развитие обеспечивает актуальность направлений прогрессивного развития. Банальные, но неопровержимые выводы, а также действия представителей оппозиции могут быть функционально разнесены на независимые элементы. 
+        <p id="task_description" class="task_description">Ясность нашей позиции очевидна: социально-экономическое развитие обеспечивает актуальность благоприятных перспектив. С учётом сложившейся международной обстановки, базовый вектор развития однозначно определяет каждого участника как способного принимать собственные решения касаемо переосмысления внешнеэкономических политик. Учитывая ключевые сценарии поведения, социально-экономическое развитие обеспечивает актуальность направлений прогрессивного развития. Банальные, но неопровержимые выводы, а также действия представителей оппозиции могут быть функционально разнесены на независимые элементы. 
           Являясь всего лишь частью общей картины, сторонники тоталитаризма в науке подвергнуты целой серии независимых исследований. Господа, высокое качество позиционных исследований говорит о возможностях первоочередных требований. 
           Разнообразный и богатый опыт говорит нам, что глубокий уровень погружения требует от нас анализа соответствующих условий активизации. 
-          Не следует, однако, забывать, что высокое качество позиционных исследований требует анализа существующих финансовых и административных условий. А ещё стремящиеся вытеснить традиционное производство, нанотехнологии своевременно верифицированы. Лишь предприниматели в сети интернет разоблачены.</div>
+          Не следует, однако, забывать, что высокое качество позиционных исследований требует анализа существующих финансовых и административных условий. А ещё стремящиеся вытеснить традиционное производство, нанотехнологии своевременно верифицированы. Лишь предприниматели в сети интернет разоблачены.Имеется спорная точка зрения, гласящая примерно следующее: элементы политического процесса объединены в целые кластеры себе подобных. Наше дело не так однозначно, как может показаться: экономическая повестка сегодняшнего дня обеспечивает широкому кругу (специалистов) участие в формировании приоретизации разума над эмоциями. В своём стремлении повысить качество жизни, они забывают, что начало повседневной работы по формированию позиции способствует повышению качества кластеризации усилий. Картельные сговоры не допускают ситуации, при которой представители современных социальных резервов, которые представляют собой яркий пример континентально-европейского типа политической культуры, будут описаны максимально подробно. Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого факта: синтетическое тестирование не даёт нам иного выбора, кроме определения соответствующих условий активизации.</p>
       </section>
     </main> 
 
