--- a/html/current_courses.html
+++ b/html/current_courses.html
@@ -26,7 +26,7 @@
 
     <main class="main_container">
       <section class="idk_buttons_container">
-        <a href="newProfile.html"><img src="../img/Занятия/Frame 2064.svg" alt="Человек"></a>
+        <a href="profile.html"><img src="../img/Занятия/Frame 2064.svg" alt="Человек"></a>
         <a href="current_courses.html"><img src="../img/Занятия/Frame 2066.svg" alt="Документ"></a>
         <a href="courses.html"><img src="../img/Занятия/Frame 2067.svg" alt="Куб"></a>
         <a href="profile.html"></a><img src="../img/Занятия/Frame 2068.svg" alt="Квадрат"></a>
