--- a/html/headerM&footer.html
+++ b/html/headerM&footer.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="footer_box footer_info">
-                <p class="footer_info_subtitle">По любым вопросам звоните или пишите в техническую поддержку.</p>
+                <p class="footer_info_subtitle">По вопросам обращайтесь в техническую поддержку.</p>
                 <p class="footer_info_text">
                     Наш адрес: <br>
                     Школьная улица, 9А, Волоколамск, Московская область
