--- a/html/profile.html
+++ b/html/profile.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="info_menu_item">
-                    <img src="../img/notification1.png" alt="Chats">
+                    <img src="../img/Chat Message.png" alt="Chats">
                     <a class="info_menu_item_link" href="#">Чаты</a>
                 </div>
 
