ссылка на профори

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -180,7 +180,7 @@
         <div class="test_container_left">
           <div class="text1_test">Не знаете, какой курс вам подходит?</div>
           <div class="text2_test" >Мы поможем выбрать курс на основе результата теста</div>
-          <div class="see_test_btn">Пройти тест</div>
+          <a href="https://vk.com/app5708398_-155119660"><div class="see_test_btn">Пройти тест</div></a>
         </div>
         <img class="test_img" src="../img/Rectangle 5.png"/>
       </div>
