Фильтры и стрелкы для мейн

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -33,7 +33,7 @@
     <main>
 
 
-
+      <section class="main_container">
       <div class="benefits_cards_container">
         <div class="benefit_card">
           <img class="benefit_card_img" src="../img/Rectangle.png"/>
@@ -54,119 +54,125 @@
 
       <div class="course_type_container">
         <ul class="course_list">
-          <li class="course_type_btn course_type_btn_active">Программирование</li>
-          <li class="course_type_btn">Создание игр</li>
-          <li class="course_type_btn">Digital - искусство</li>
-          <li class="course_type_btn">Досуг</li>
+          <li data-f="all" class="course_type_btn course_type_btn_active">Все</li>
+          <li data-f="Dev" class="course_type_btn">Программирование</li>
+          <li data-f="GameDev" class="course_type_btn">Создание игр</li>
+          <li data-f="DigitalArt" class="course_type_btn">Digital - искусство</li>
+          <li data-f="Being" class="course_type_btn">Досуг</li>
         </ul>
       </div>
       <div class="course_age_container">
         <ul class="course_list">
-          <li class="course_age_btn course_age_btn_active">6+</li>
-          <li class="course_age_btn">7+</li>
-          <li class="course_age_btn">9+</li>
-          <li class="course_age_btn">10+</li>
-          <li class="course_age_btn">12+</li>
-          <li class="course_age_btn">14+</li>
+          <li data-fAge="all" class="course_age_btn course_age_btn_active">Все</li>
+          <li data-fAge="6" class="course_age_btn">6+</li>
+          <li data-fAge="7" class="course_age_btn">7+</li>
+          <li data-fAge="9" class="course_age_btn">9+</li>
+          <li data-fAge="10" class="course_age_btn">10+</li>
+          <li data-fAge="12" class="course_age_btn">12+</li>
+          <li data-fAge="14" class="course_age_btn">14+</li>
         </ul>
       </div>
-
-      <div class="courses_container">
-        <div id="coursesLine" class="courses-line">
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch"/>
-            <div class="course_description_container">
-              <div class="course_card_name">Scrath</div>
-              <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать собственные анимированные интерактивные игры и проекты.</div>
+    </section>
+      <div class="courses">
+        <img src="../img/arrowleft2.svg" alt="Left" class="arrows" id="leftArrow">
+        <div class="courses_container">
+          <div id="coursesLine" class="courses_line">
+            <div data-f="GameDev" data-fAge="6" class="course_card">
+              <img class="course_card_img" src="../img/Frame 1908.png" alt="Scratch"/>
+              <div class="course_description_container">
+                <div class="course_card_name">Scrath</div>
+                <div class="course_card_description">Визуальная среда программирования, которая позволяет детям создавать собственные анимированные интерактивные игры и проекты.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1909.png" alt="HTML + CSS + JavaScript"/>
-            <div class="course_description_container">
-              <div class="course_card_name">HTML + CSS + JavaScript</div>
-              <div class="course_card_description">Создание динамической страницы сайта. Научим программированию.</div>
+            <div data-f="DigitalArt" data-fAge="12" class="course_card">
+              <img class="course_card_img" src="../img/Frame 1909.png" alt="HTML + CSS + JavaScript"/>
+              <div class="course_description_container">
+                <div class="course_card_name">HTML + CSS + JavaScript</div>
+                <div class="course_card_description">Создание динамической страницы сайта. Научим программированию.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1910.png" alt="Python Start"/>
-            <div class="course_description_container">
-              <div class="course_card_name">Python Start</div>
-              <div class="course_card_description">Язык программирования, входящий в топ-10 самых востребованных языков программирования.  Используется при создании сайтов и приложений.</div>
+            <div data-f="Dev" data-fAge="14" class="course_card">
+              <img class="course_card_img" src="../img/Frame 1910.png" alt="Python Start"/>
+              <div class="course_description_container">
+                <div class="course_card_name">Python Start</div>
+                <div class="course_card_description">Язык программирования, входящий в топ-10 самых востребованных языков программирования.  Используется при создании сайтов и приложений.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="PHP"/>
-            <div class="course_description_container">
-              <div class="course_card_name">PHP</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div data-f="Being" data-fAge="9" class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="PHP"/>
+              <div class="course_description_container">
+                <div class="course_card_name">PHP</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test1"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test1</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test1"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test1</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test2"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test2</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test2"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test2</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test3"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test3</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test3"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test3</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test4"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test4</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test4"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test4</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test5"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test5</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test5"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test5</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test6"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test6</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test6"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test6</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test7"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test7</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test7"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test7</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test8"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test8</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test8"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test8</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
-          </div>
-          <div class="course_card">
-            <img class="course_card_img" src="../img/Frame 1911.png" alt="test9"/>
-            <div class="course_description_container">
-              <div class="course_card_name">test9</div>
-              <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+            <div class="course_card">
+              <img class="course_card_img" src="../img/Frame 1911.png" alt="test9"/>
+              <div class="course_description_container">
+                <div class="course_card_name">test9</div>
+                <div class="course_card_description">Интерпретируемый язык программирования общего назначения, работающий на серверной стороне. Используется во всех сферах IT.</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
+        <img src="../img/arrowright2.svg" alt="Right" class="arrows" id="rightArrow">
+    </div>
+      <section class="main_container">
       <div class="slider_btns_line">
         <ul class="slider_btn_list">
           <li class="slider_btn slider_btn_active"></li>
@@ -238,6 +244,7 @@
         </div>
       </div>
     </div>
+  </section>
 
     </main>
 
