--- a/html/headerM&footer.html
+++ b/html/headerM&footer.html
@@ -20,7 +20,7 @@
                     <a href="#" class="header_menu_box_link">О нас</a>
                 </div>
 
-                <a href="../html/registration.html" class="reg_btn">Зарегистрироваться</a>
+                <a href="../html/registration.html" class="header_menu_action">Войти</a>
             </div>
         </section>
     </header>
@@ -53,10 +53,9 @@
                     Школьная улица, 9А, Волоколамск, Московская область
                 </p>
                 <div class="footer_info_box">
-                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"><img
-                            src="../img/Rectangle 3.png" alt="Vk"></a>
+                    <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"></a>
 
-                    <a href="#" class="footer_info_box_item"><img src="../img/Rectangle 3.png" alt="Instagram"></a>
+                    <a href="#" class="footer_info_box_item"></a>
                 </div>
             </div>
         </section>
