--- a/html/main_page.html
+++ b/html/main_page.html
@@ -16,17 +16,17 @@
 <body class="main_background">
   <header>
     <section class="header">
-      <div class="header_menu">
-        <div class="header_menu_box">
-          <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
-          <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
-          <a href="#" class="header_menu_box_link">О нас</a>
-        </div>
+        <div class="header_menu">
+            <div class="header_menu_box">
+                <a href="../html/main_page.html" class="header_menu_box_link">Главная</a>
+                <a href="../html/courses.html" class="header_menu_box_link">Курсы</a>
+                <a href="#" class="header_menu_box_link">О нас</a>
+            </div>
 
-        <a href="../html/registration.html" class="header_menu_action">Войти</a>
-      </div>
+            <a href="../html/registration.html" class="header_menu_action">Войти</a>
+        </div>
     </section>
-  </header>
+</header>
   <div class="upper_section">
     <h1 class="upper_text">Учим программированию, созданию игр, digital - искусству и полезным вещам IT.</h1>
     <img class="woman_img" src="../img/online_meetings.png" alt="woman">
@@ -269,40 +269,39 @@
 
   <footer>
     <section class="footer">
-      <div class="footer_box">
-        <h2 class="footer_box_title">Информация</h2>
-        <ol class="footer_box_list">
-          <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
-          <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
-          <li><a href="#" class="footer_box_list_item">О нас</a></li>
-          <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
-        </ol>
-      </div>
-
-      <div class="footer_box">
-        <h2 class="footer_box_title">Контакты</h2>
-        <ol class="footer_box_list">
-          <li><a
-              href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
-              class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
-          </li>
-        </ol>
-      </div>
-
-      <div class="footer_box footer_info">
-        <p class="footer_info_subtitle">По вопросам обращайтесь в техническую поддержку.</p>
-        <p class="footer_info_text">
-          Наш адрес: <br>
-          Школьная улица, 9А, Волоколамск, Московская область
-        </p>
-        <div class="footer_info_box">
-          <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"></a>
-
-          <a href="#" class="footer_info_box_item"></a>
+        <div class="footer_box">
+            <h2 class="footer_box_title">Информация</h2>
+            <ol class="footer_box_list">
+                <li><a href="../html/main_page.html" class="footer_box_list_item">Главная</a></li>
+                <li><a href="../html/courses.html" class="footer_box_list_item">Курсы</a></li>
+                <li><a href="#" class="footer_box_list_item">О нас</a></li>
+                <li><a href="../html/profile.html" class="footer_box_list_item">Личный кабинет</a></li>
+            </ol>
         </div>
-      </div>
+
+        <div class="footer_box">
+            <h2 class="footer_box_title">Контакты</h2>
+            <ol class="footer_box_list">
+                <li><a href="https://yandex.ru/maps/?um=constructor%3Ad499c2ffbb5ed73d0561099773c2f551dccfb4a15d0237d275bd69397c24c2f4&source=constructorLink"
+                        class="footer_box_list_item footer_navigate"><img src="../img/gps.png" alt="Navigate"></a>
+                </li>
+            </ol>
+        </div>
+
+        <div class="footer_box footer_info">
+            <p class="footer_info_subtitle">По вопросам обращайтесь в техническую поддержку.</p>
+            <p class="footer_info_text">
+                Наш адрес: <br>
+                Школьная улица, 9А, Волоколамск, Московская область
+            </p>
+            <div class="footer_info_box">
+                <a href="https://vk.com/cyberclass_volok" class="footer_info_box_item"></a>
+
+                <a href="#" class="footer_info_box_item"></a>
+            </div>
+        </div>
     </section>
-  </footer>
+</footer>
 </body>
 
 </html>
